--- a/styles/bio.css
+++ b/styles/bio.css
@@ -2,6 +2,7 @@
     margin: 0;
     padding: 0;
     border: 1px dotted black;
+    font-family: Arial, Helvetica, sans-serif;
 }
 
 html, body {
@@ -22,31 +23,45 @@ html, body {
     /* Navigation-Section */
     .nav {
       background-color: #323232;
-      padding: .8rem;
+      padding-bottom: 1.5;
       text-align: center;
     }
 }   .nav-logo {
     background-image: url(/assets//Logo/Logo-bandsite.svg);
+    background-color: #323232;
     background-position: center;
     background-repeat: no-repeat;
-    padding: 1rem;
+    padding: 1.5rem;
+    max-height: 1.25rem;
+    height: 7.5rem;
+
   
 }   .nav-bar {
     list-style-type: none;
-    display: flex;
     justify-content: space-around;
+    
+    display: flex;
+    overflow: hidden;
+    width: 100%;
     padding-top: 1rem;
-   
+    padding-bottom: 1rem;
+
 }   .nav-bar__links {
     text-decoration: none;
     color: white;
+    font-size: 14px;
+    font-weight: 700;
+    line-height: 20px;
 
 
     /* Hero-Section */
 }  .hero {
     opacity: 50%;
-    margin-top: -4.21rem;
+    margin-top: -1.4rem;
     padding-bottom: 1.5rem;
+    font-size: 14px;
+    line-height: 22px;
+    font-weight: 600;
 
 }  .hero-title__img{
     width: 100%;
@@ -55,11 +70,11 @@ html, body {
 }  .hero-title {
     z-index: 2;
     padding-left: 1rem;
-    transform: translateY(10rem);
+    transform: translateY(7.5rem);
     color: #FFFFFF;
 
     /* About-Section */
-}  .about {
+}   .about {
     padding-right: 1rem;
     padding-left: 1rem;
     padding-bottom: 1rem;
@@ -67,14 +82,29 @@ html, body {
 }  .about-img {
     padding-bottom: 1rem;
     padding-top: 1rem;
+    
 }  .about-title {
     margin: 0;
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 700;
 
-}  .about-quote__the-bees{
+}   .about-quote__quote, .about-quote__author {
+    font-size: 14px;
+    line-height: 32px;
+    font-weight: 700;
+}   .about-quote__the-bees{
+    font-size: 14px;
+    line-height: 22px;
+    font-weight: demi 600;
     padding-bottom: 1rem;
 }   .about-quote__author{
     padding-bottom: 1rem;
-}   .about-band__img{
+}   .about-text{
+    font-size: 13px;
+    line-height: 18px;
+    font-weight: 400
+}  .about-band__img{
     width: 100%;
     height: auto;
     z-index: 1;
@@ -85,10 +115,15 @@ html, body {
     padding-right: 1rem;
     padding-left: 1rem;
     padding-top: 1.5rem;
-    background-color: #e1e1e1;
+    background-color:   #fafafa;
+  
 
 }   .photos-title {
     padding-bottom: 1rem;
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 700;
+
 }   .photos-imgs {
     padding-bottom: 1rem;
 
@@ -106,6 +141,9 @@ html, body {
     color: white;   
 }  .footer-title {
     color: white;
+    font-size: 24px;
+    line-height: 32px;
+    font-weight: 700;
 }   .footer-logo {
     background-image: url(/assets//Logo/Logo-bandsite.svg);
     background-position: left;
@@ -115,8 +153,8 @@ html, body {
 }   .footer-info__websites{
     display: flex;
     padding-right: 1rem;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
+    padding-top: 1.5rem;
+    padding-bottom: 1.5rem;
 }   .footer-info__instagram{
     background-image: url(/assets/Icons/SVG/Icon-instagram.svg);    
     background-repeat: no-repeat;
@@ -134,6 +172,10 @@ html, body {
     background-repeat: no-repeat;
     width: 2rem;
     height: 2rem;
+}   .footer-info__socials{
+    font-size: 13px;
+    line-height: 18px;
+    font-weight: 400;
 }   .footer-list {
     list-style-type: none;
 }   .footer-list__email {
@@ -146,6 +188,7 @@ html, body {
     padding-bottom: 1r  em;
     height: 1.5rem;
 }   .copyright {
+    padding-top: 0.5rem;
     padding-bottom: 1rem;
 }
 
