--- a/styles/bio.css
+++ b/styles/bio.css
@@ -17,6 +17,7 @@ html, body {
   background-repeat: no-repeat;
   background-position: center;
   height: 1.25rem;
+  padding-top: 1.5rem;
 }
 
 .nav {
@@ -32,11 +33,12 @@ html, body {
 .nav__link {
   padding: 0.625rem;
   text-decoration: none;
-  color: #FFFFFF;
+  color: #AFAFAF;
   transition: background-color 0.25s;
   display: flex;
   width: 50%;
   justify-content: space-evenly;
+  transition: all 0.5s;
 }
 @media screen and (min-width: 768px) {
   .nav__link {
@@ -44,7 +46,9 @@ html, body {
   }
 }
 .nav__link:hover {
-  background-color: black;
+  border-bottom: 0.1875rem solid #FFFFFF;
+  transform: sca(1.5);
+  color: #FFFFFF;
 }
 
 .hero {
@@ -71,6 +75,14 @@ html, body {
   padding-top: 1.5rem;
   padding-bottom: 1rem;
 }
+.about-quote__text {
+  margin: 0;
+  padding-top: 1rem;
+}
+.about-quote__author {
+  margin: 0;
+  padding-top: 1rem;
+}
 
 .about-band__img {
   width: 100%;
@@ -79,6 +91,10 @@ html, body {
 
 .about-text {
   margin: 0;
+}
+
+.tablet-about__text {
+  padding-bottom: 1rem;
 }
 
 .photo {
@@ -94,5 +110,77 @@ html, body {
 
 .photo-img__img {
   width: 100%;
+  padding-bottom: 1rem;
+}
+
+.footer {
+  padding-right: 1rem;
+  padding-left: 1rem;
+  background: #323232;
+  color: #FFFFFF;
+}
+.footer-title {
+  padding-top: 1.5rem;
+  padding-bottom: 1rem;
+  margin: 0;
+}
+.footer--info__socials {
+  list-style-type: none;
+}
+.footer-list {
+  list-style-type: none;
+  margin: 0;
+  padding: 0;
+}
+.footer-list__name2 {
+  padding-bottom: 1rem;
+}
+.footer-list__general2 {
+  padding-bottom: 1rem;
+}
+.footer-list__email {
+  padding-bottom: 1rem;
+}
+.footer-logo__mobile {
+  padding-top: 1.5rem;
+}
+.footer-logo {
+  background-image: url("../assets/Logo/Logo-bandsite.svg");
+  background-repeat: no-repeat;
+  background-position: left;
+  height: 1.25rem;
+}
+.footer-info__instagram {
+  background-image: url(/assets/Icons/SVG/Icon-instagram.svg);
+  justify-content: center;
+  background-repeat: no-repeat;
+  width: 3rem;
+  height: 3rem;
+}
+.footer-info__facebook {
+  background-image: url(/assets/Icons/SVG/Icon-facebook.svg);
+  justify-content: center;
+  background-repeat: no-repeat;
+  width: 3rem;
+  height: 3rem;
+}
+.footer-info__twitter {
+  background-image: url(/assets/Icons/SVG/Icon-twitter.svg);
+  justify-content: center;
+  background-repeat: no-repeat;
+  width: 3rem;
+  height: 3rem;
+}
+.footer-info__websites {
+  display: flex;
+}
+.footer-list {
+  padding-bottom: 1.5rem;
+}
+
+.copyright {
+  margin: 0;
+  padding: 0;
+  padding-top: 1.5rem;
   padding-bottom: 1rem;
 }/*# sourceMappingURL=bio.css.map */
