--- a/styles/bio.scss
+++ b/styles/bio.scss
@@ -38,7 +38,6 @@ html, body {
     padding: 0;
 }
 
-
 .header {
     background: $bandsite-Black;
     padding-right: 1rem;
@@ -49,7 +48,7 @@ html, body {
         background-repeat: no-repeat;
         background-position: center;
         height: 1.25rem;
-        
+        padding-top: 1.5rem;
     }
 }
 
@@ -64,17 +63,21 @@ html, body {
     &__link {
         padding: 0.625rem;
         text-decoration: none;
-        color: $white;
+        color: $silver;
         transition: background-color 0.25s;
         display: flex;
         width: 50%;
         justify-content: space-evenly;
+        transition: all 0.5s;
     
         @include tablet {
             font-size: 1.5rem;
         }
         &:hover{
-            background-color: darken($bandsite-DarkBlack, 5%);
+            // background-color: darken($bandsite-DarkBlack, 5%);
+            border-bottom: 0.1875rem solid ($white);
+            transform: sca(1.5);
+            color: $white;
         }
     }
 } 
@@ -82,11 +85,6 @@ html, body {
 .hero {
     display: flex;
     align-items: center;
-    // justify-content: center left;
-    // margin: auto;
-    // background-size: cover;
-    // background-repeat: no-repeat;
-    // background-position: center;
     
     &__title {
     color: $white;
@@ -109,6 +107,14 @@ html, body {
     padding-top: 1.5rem;
     padding-bottom: 1rem;
     }
+    &-quote__text{
+        margin: 0;
+        padding-top: 1rem;
+    }
+    &-quote__author{
+        margin: 0;
+        padding-top: 1rem;
+    }
 }
 
 .about-band {
@@ -121,6 +127,10 @@ html, body {
 
 .about-text {
     margin: 0;
+}
+
+.tablet-about__text{
+    padding-bottom: 1rem;
 }
 
 .photo {
@@ -137,5 +147,85 @@ html, body {
 
 .photo-img__img {
     width: 100%;
+    padding-bottom: 1rem;
+}
+
+.footer {
+    padding-right: 1rem;
+    padding-left: 1rem;
+    background: $bandsite-Black;
+    color: $white;
+    
+    &-title{
+        padding-top: 1.5rem;
+        padding-bottom: 1rem;
+        margin: 0;
+    }
+    &--info__socials{
+        list-style-type: none;
+    }
+    &-list{
+        list-style-type: none;
+        margin: 0;
+        padding: 0;
+    }
+    &-list__name2 {
+        padding-bottom: 1rem;
+    }
+    &-list__general2{
+        padding-bottom: 1rem;
+    }
+    &-list__email{
+        padding-bottom: 1rem;
+    }
+    &-logo__mobile{
+        padding-top: 1.5rem;
+    }
+    &-logo{
+        background-image: url('../assets/Logo/Logo-bandsite.svg');
+        background-repeat: no-repeat;
+        background-position: left;
+        height: 1.25rem;
+        
+    }
+    &-info__instagram{
+        background-image: url(/assets/Icons/SVG/Icon-instagram.svg);    
+        justify-content: center;
+        background-repeat: no-repeat;
+        width: 3rem;
+        height: 3rem;
+        
+    }
+    &-info__facebook{
+        background-image: url(/assets/Icons/SVG/Icon-facebook.svg);    
+        justify-content: center;
+        background-repeat: no-repeat;
+        width: 3rem;
+        height: 3rem;    
+       
+    }
+    &-info__twitter{
+        background-image: url(/assets/Icons/SVG/Icon-twitter.svg);    
+        justify-content: center;
+        background-repeat: no-repeat;
+        width: 3rem;
+        height: 3rem;
+
+    }
+    &-info__websites{
+        display: flex;
+        
+    
+    }
+    &-list{
+        padding-bottom: 1.5rem;
+    }
+    
+}
+
+.copyright {
+    margin: 0;
+    padding: 0;
+    padding-top: 1.5rem;
     padding-bottom: 1rem;
 }
